--- a/browser/devtools/shared/test/Makefile.in
+++ b/browser/devtools/shared/test/Makefile.in
@@ -15,6 +15,7 @@ XPCSHELL_TESTS = unit
 
 MOCHITEST_BROWSER_FILES = \
   browser_browser_basic.js \
+  browser_devtools_api.js \
   browser_promise_basic.js \
   browser_require_basic.js \
   browser_templater_basic.js \
