--- a/browser/devtools/toolbox/Makefile.in
+++ b/browser/devtools/toolbox/Makefile.in
@@ -11,3 +11,6 @@ VPATH		= @srcdir@
 include $(DEPTH)/config/autoconf.mk
 
 include $(topsrcdir)/config/rules.mk
+
+libs::
+	$(NSINSTALL) $(srcdir)/*.jsm $(FINAL_TARGET)/modules/devtools
