changes to add the web console to the toolbox

--- a/browser/devtools/webconsole/Makefile.in
+++ b/browser/devtools/webconsole/Makefile.in
@@ -16,6 +16,7 @@ EXTRA_JS_MODULES = \
 		NetworkHelper.jsm \
 		NetworkPanel.jsm \
 		AutocompletePopup.jsm \
+		WebConsoleToolbox.jsm \
 		WebConsoleUtils.jsm \
 		$(NULL)
 
