--- a/browser/devtools/Makefile.in
+++ b/browser/devtools/Makefile.in
@@ -26,7 +26,7 @@ DIRS = \
   layoutview \
   shared \
   responsivedesign \
-  toolbox \
+  framework \
   $(NULL)
 
 include $(topsrcdir)/config/rules.mk
