DevToolInstance is a bad name. Let's use DevToolPanel.

--- a/browser/devtools/webconsole/Makefile.in
+++ b/browser/devtools/webconsole/Makefile.in
@@ -16,7 +16,7 @@ EXTRA_JS_MODULES = \
 		NetworkHelper.jsm \
 		NetworkPanel.jsm \
 		AutocompletePopup.jsm \
-		WebConsoleToolbox.jsm \
+		WebConsolePanel.jsm \
 		WebConsoleUtils.jsm \
 		$(NULL)
 
