--- a/browser/devtools/framework/test/Makefile.in
+++ b/browser/devtools/framework/test/Makefile.in
@@ -12,5 +12,6 @@ include $(DEPTH)/config/autoconf.mk
 
 MOCHITEST_BROWSER_FILES = \
 		browser_toolbox_dynamic_registration.js \
+		browser_toolbox_hosts.js \
 
 include $(topsrcdir)/config/rules.mk
